<resources>
    <string name="app_name">Journal App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="med_manager_title">Journal-App</string>
    <string name="med_content">a complete solution</string>
    <string name="nav_entries">Journal Entries</string>
    <string name="nav_add_update">Add or Update Journals</string>
    <string name="nav_details">Journal Details</string>
    <string name="med_solution">managing notes</string>
    <string name="update_button">Update Journal</string>
    <string name="med_button">Get Started</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="this_month">List of Entries</string>
    <string name="read_more">Read More</string>
    <string name="search_med">Search your medication</string>
    <string name="med_search">Enter search text</string>
    <string name="search_now">Search</string>
    <string name="menu_add">Add Journal</string>
    <string name="menu_update">Update Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_view">View Journals</string>
    <string name="status_completed">Dosage Completed</string>
    <string name="status_current">Dosage In progress</string>
    <string name="status_pending">Dosage not started</string>
    <string name="drug_name">Paracetamol</string>
    <string name="add_journal">Add Journal</string>
    <string name="add_phone">Enter Phone Number</string>
    <string name="add_age">Enter Age</string>
    <string name="add_location">Enter Location</string>
    <string name="drug_frequency">2X per day</string>
    <string name="main_notification_channel_name">Notification Channel for Medication</string>
    <string name="medication_reminder_notification_title">It is time to take your medication</string>
    <string name="medication_reminder_notification_body">Do no                                                                                                                                                                                                                                                                  t miss your medication click on check to checkout the medication you are meant to take</string>
    <string name="drug_time">2nd - 4th March</string>
    <string name="drug_status">Completed 6/6 dosage</string>
    <string name="drug_dosage">Two tablets of paracetamol for my headache thrice a day</string>
    <string name="update_profile">Update profile</string>
    <string name="start_date_label">Enter start date in dd/mm/yy format</string>
    <string name="end_date_label">Enter end date in dd/mm/yy format</string>
    <string name="title_activity_journal_list">JournalListActivity</string>>
</resources>
