<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_journal_list"
    android:layout_width="fill_parent"
    android:layout_height="225dp"
    android:padding="32dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="24dp"
    card_view:cardBackgroundColor="@android:color/transparent"
    card_view:cardElevation="10dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_journal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drug_name"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            android:textColor="#00C5F3"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_journal_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drug_dosage"
            android:textSize="16sp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:ellipsize="end"
            android:maxLines="2"/>
        <TextView
            android:id="@+id/tv_journal_updated_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drug_frequency"
            android:textSize="20sp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/read_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_centerInParent="true"
            android:text="@string/read_more"
            android:textColor="#FFFFFF"
            android:padding="15dp"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
