<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_single_journal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dent.journalapp.SingleJournalActivity">
    <include
        android:id="@+id/my_toolbar6" layout="@layout/toolbar"></include>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/lamp"
        android:scaleType="centerCrop"
        android:tint="#8c000000"
        android:layout_marginTop="48dp"
        android:layout_alignParentBottom="true" />
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_single_journal_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="96dp"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardElevation="10dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/tv_single_journal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_name"
                android:textSize="32sp"
                android:layout_marginTop="32dp"
                android:textColor="#00C5F3"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_single_journal_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_dosage"
                android:textSize="16sp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:textColor="#FFFFFF"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/tv_single_journal_updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_frequency"
                android:textSize="20sp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:textColor="#FFFFFF"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_centerInParent="true"
                android:text="@string/update_button"
                android:textColor="#FFFFFF"
                android:padding="15dp"
                android:onClick="onSubmit"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
